feat: Реализация метода изменения роли пользователя, реализация добавления админа через консоль
